--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
 .quiz-button:hover {
     background: #45a049; /* Darker green on hover */
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -62,6 +63,15 @@ nav {
 .nav-links a {
     color: white;
     text-decoration: none;
+}
+
+.menu-toggle {
+    display: none;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
 }
 
 main {
@@ -117,10 +127,15 @@ form button {
         top: 60px;
         right: 0;
         width: 100%;
+        display: none; /* Hide by default */
     }
 
     .nav-links.active {
-        display: flex;
+        display: flex; /* Show when active */
+    }
+
+    .menu-toggle {
+        display: block;
     }
 
     main {
